# pof

./: .gitignore  .noseids  .pylintrc  Calibration notes  Pipfile  PoF Structure.drawio  Procfile  README.md  README_Old.md  TODO.txt  config.py  main-demo.py  main.py  pyproject.toml  requirements.txt  temp.py
configs/: config.ini  config.toml  failure_mode.ini  loader_config.ini  test_config.ini
dash/: layouts.py
data/: fixtures.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
notebooks/: ACS - Poles - Failure Rates - Explained.ipynb  ACS - Poles - Failure Rates - Method 2.ipynb  ACS - Poles - Failure Rates.ipynb  asset_data.ipynb  asset_model.ipynb  asset_model_loader.ipynb  colour_map.ipynb  component.ipynb  condition.ipynb  csv.csv  dash copy.ipynb  dash.ipynb  dash_figures_testing.ipynb  dash_locking_concept.ipynb  dash_runner.ipynb  decorators.ipynb  degradation.ipynb  demo_missing_data.ipynb  distribution.ipynb  failure_mode.ipynb  forecast_month_year.ipynb  functional_conditional_failures.ipynb  functional_conditional_failures_system.ipynb  illyse.ipynb  illyse_2.ipynb  indicator.ipynb  loader_parse_txt_to_csv.ipynb  missing_data_demo.ipynb  pof_runner.ipynb  poles_fleet_data_loader.ipynb  profile.html  property_demo.ipynb  pymc3.ipynb  results.csv  results.prof  save.ipynb  tasks.ipynb  transformer.ipynb  units.ipynb  value_lost.ipynb  (+2 more)
pof/: Labour.py  __init__.py  app.py  component.py  condition copy.py  condition.py  config.py  consequence.py  dash.py  decorator_examples.py  decorators.py  degradation.py  demo.py  (+26 more)
(+72 files in other folders)
