[tool.poetry]
name = "pof"
version = "0.1.0"
description = "Probabiliy of Failure Engine"
authors = ["Gavin Treseder"]
license = ""

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
plotly = "^4.13.0"
toml = "^0.10.2"
tqdm = "^4.53.0"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
lifelines = "^0.25.6"
reliability = "^0.5.4"
makefun = "^1.9.4"
dash = "^1.17.0"
dash-core-components = "^1.13.0"
dash-html-components = "^1.1.1"
dash-bootstrap-components = "^0.10.7"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
ipython = "^7.19.0"
ipykernel = "^5.3.4"
notebook = "^6.1.5"
jupyter = "^1.0.0"
jupyter-dash = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
